--- a/content/projects/highstorm.mdx
+++ b/content/projects/highstorm.mdx
@@ -1,11 +1,10 @@
 ---
-title: "highstorm"
-description: A modern logging platform for the cloud.
-repository: chronark/highstorm
-date: "2023-01-01"
-published: true
+title: highstorm.app
+description: Simple, fast, open source custom event tracking
+date: "2023-05-01"
 url: https://highstorm.app
-  
+published: true
+repository: "chronark/highstorm"
 ---
 
 
