--- a/content/projects/qstash.mdx
+++ b/content/projects/qstash.mdx
@@ -1,8 +1,8 @@
 ---
-title: "qstash"
-description: A message queue for the serverless era.
-repository: upstash/qstash
-date: "2023-01-01"
+title: QStash
+description: QStash is a fully managed serverless queue and messaging service designed for the serverless era.
+date: "2022-07-18"
+url: https://upstash.com/qstash
 published: true
 
 ---
