--- a/content/projects/upstash-cli.mdx
+++ b/content/projects/upstash-cli.mdx
@@ -1,8 +1,8 @@
 ---
-title: "upstash-cli"
-description: A command line interface for Upstash services.
-repository: upstash/cli
-date: "2023-01-01"
+title: Upstash CLI
+description: Command line interface for Upstash
+date: "2022-07-18"
+url: https://upstash.com/cli
 published: true
 
 ---
