--- a/content/projects/upstash-edge-flags.mdx
+++ b/content/projects/upstash-edge-flags.mdx
@@ -1,8 +1,8 @@
 ---
-title: "@upstash/edge-flags"
-description: Feature flags for your edge functions.
-date: "2022-12-12"
-url: https://upstash.com/blog/edge-flags-beta
+title: Upstash Edge Flags
+description: Feature flags for edge functions
+date: "2023-02-13"
+url: https://upstash.com/edge-flags
 repository: upstash/edge-flags
 published: true
 
