--- a/content/projects/upstash-kafka.mdx
+++ b/content/projects/upstash-kafka.mdx
@@ -1,9 +1,9 @@
 ---
-title: "@upstash/kafka"
-description: A fully typed Kafka client built for Upstash Kafka and HTTP, perfect for serverless and edge runtimes
-date: "2022-01-08"
+title: Upstash Kafka
+description: Serverless Kafka for the edge
+date: "2023-02-13"
 url: https://upstash.com/kafka
-repository: upstash/upstash-kafka
+repository: upstash/kafka
 published: true
 
 ---
