--- a/content/projects/chronark.com.mdx
+++ b/content/projects/chronark.com.mdx
@@ -1,9 +1,9 @@
 ---
-title: "chronark.com"
-description: My personal website built with Next.js, Tailwind CSS, and MDX.
+title: chronark.com
+description: The website you're looking at
 repository: chronark/chronark.com
 url: https://chronark.com
-date: "2023-01-01"
+date: 2023-03-28
 published: true
 ---
 
