--- a/content/projects/envshare.mdx
+++ b/content/projects/envshare.mdx
@@ -1,8 +1,9 @@
 ---
-title: "envshare"
-description: A simple and secure way to share environment variables.
+title: envshare.dev
+description: EnvShare is a simple tool to share environment variables securely. It uses AES-GCM to encrypt your data before sending it to the server. The encryption key never leaves your browser.
+date: "2023-01-16"
+url: https://envshare.dev
 repository: chronark/envshare
-date: "2023-01-01"
 published: true
 ---
 
