--- a/content/projects/upstash-ratelimit-analytics.mdx
+++ b/content/projects/upstash-ratelimit-analytics.mdx
@@ -1,10 +1,7 @@
 ---
 title: Upstash Ratelimit Analytics
-description: Near realtime analytics for your ratelimits. Integrated into the @upstash/ratelimit library.
-repository: upstash/ratelimit"
-url: https://console.upstash.com/ratelimit
+description: Analytics for Upstash Ratelimit
 published: true
-
 ---
 
 TODO:
