--- a/content/projects/upstash-ratelimit.mdx
+++ b/content/projects/upstash-ratelimit.mdx
@@ -1,8 +1,8 @@
 ---
-title: "@upstash/ratelimit"
-description: Ratelimiting library for serverless and edge runtimes. Built on top of Upstash Redis.
-date: "2022-06-06"
-url: https://upstash.com/blog/upstash-ratelimit
+title: Upstash Rate Limit
+description: Rate limiting for edge functions
+date: "2023-02-13"
+url: https://upstash.com/ratelimit
 repository: upstash/ratelimit
 published: true
 
