--- a/content/projects/upstash-react-ui.mdx
+++ b/content/projects/upstash-react-ui.mdx
@@ -1,9 +1,6 @@
 ---
-title: React.js CLI
-description: A CLI React component to interact with Upstash Redis databases.
-date: "2023-02-05"
-url: https://upstash.com
-repository: upstash/react-ui
+title: Upstash React UI
+description: React UI components for Upstash
 published: true
 
 ---
