--- a/content/projects/upstash-redis.mdx
+++ b/content/projects/upstash-redis.mdx
@@ -1,9 +1,6 @@
 ---
-title: "@upstash/redis"
-description: A fully typed Redis client built for Upstash Redis and HTTP, perfect for serverless and edge runtimes.
-date: "2022-03-14"
-url: https://upstash.com/redis
-repository: upstash/upstash-redis
+title: Upstash Redis
+description: Redis client for Upstash
 published: true
 
 ---
